k8s/react-grid-layout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  selector:
    app: react-grid-layout
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
